<resources>

    <string name="app_name">WaiterUp</string>
    <string name="logIn">Кирүү</string>
    <string name="password_hint">Сыр сөз</string>
    <string name="settings">Тууралоолор</string>

    <string name="newOrder">Жаңы заказ</string>
    <string name="clockOrder">Саат боюнча заказ</string>
    <string name="openOrder">Бүтө элек заказ</string>
    <string name="closedOrder">Жабык заказ</string>
    <string name="logOut">Чыгуу</string>
    <string name="ru">Русский</string>
    <string name="kg">Кыргызча</string>
    <string name="host">http://192.168.130.78:8080</string>
    <string name="hostText">Сервердин IP адресин жазуу керек \n мисал:http://192.168.130.78:8080</string>
    <string name="update">Жаңылоо</string>
    <string name="logOutTxt">Тиркемеден чыгуу</string>
    <string name="logSure">Сиз чын эле тиркемеден чыгууну каалайсызбы?</string>
    <string name="no">Жок</string>
    <string name="yes">Оа</string>
    <string name="checkboxTxt">Сырттан \n заказ</string>
    <string name="ordering">Заказ берүү</string>
    <string name="foodEnd">Түгөндү</string>
    <string name="errorPassword">Сыр сөз туура эмес!</string>
    <string name="errorInt">Интернет тууралоолорду текшериңиз!</string>
    <string name="auth">Авторизация</string>
    <string name="alltxt">Баары</string>
    <string name="change_spinner_name">Атыңызды тандаңыз</string>
    <string name="cancel">Кайтуу</string>
    <string name="table">Стол</string>
    <string name="floor">Зал</string>
    <string name="som">сом</string>
    <string name="summ">Суммасы:</string>
    <string name="aboutOrder">Заказ боюнча маалымат</string>
    <string name="additional_order">Кошумча заказ</string>
    <string name="check">Чек чыгаруу</string>
    <string name="close_order">Заказды жабуу</string>
    <string name="success">Сиздин талабыңыз ийгиликтүү аяктады!</string>
    <string name="last_control">Акыркы текшерүү</string>
    <string name="is_empty">Заказ тандалган жок!</string>
    <string name="send_order_title">Заказды жөнөтүү</string>
    <string name="send_order">Заказды жөнөтүүгө макулсузбу?</string>

</resources>
