<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/app_name"
        android:gravity="center_horizontal"
        android:id="@+id/txtWaiterName"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:id="@+id/btnNewOrder"
        android:textColor="@color/black"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/newOrder"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:id="@+id/btnClockOrder"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/clockOrder"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:id="@+id/btnOpenOrder"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/openOrder"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:id="@+id/btnClosedOrder"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/closedOrder"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:textSize="17sp"
        android:id="@+id/btnLogOut"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/logOut"
        />

</LinearLayout>
</LinearLayout>