<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AboutOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingBottom="10dp"
        android:gravity="center_horizontal"
        android:id="@+id/lin"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_date"
            android:textSize="16sp"
            android:text="@string/app_name"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_table"
            android:textSize="16sp"
            android:text="@string/app_name"
            android:layout_marginStart="10dp"
            android:textColor="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_total_sum"
            android:text="@string/foodEnd"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </LinearLayout>


    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:id="@+id/recycler_about_order"
        android:layout_below="@+id/lin">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="addOrderBtn"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:text="@string/additional_order"
            android:textColor="@color/white" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="printCheckBtn"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:text="@string/check"
            android:textColor="@color/white" />

        <Button
            android:onClick="closeOrderBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/close_order"
            android:textColor="@color/white" />
    </LinearLayout>

</RelativeLayout>