<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.NewOrderActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <org.angmarch.views.NiceSpinner
            android:id="@+id/category_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/menu_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="17sp"
            android:layout_gravity="center_vertical"
            android:text="@string/checkboxTxt" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_update"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimaryDark"
            android:text="@string/update"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/btn_order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/ordering"
            android:textColor="@color/white" />
    </LinearLayout>


</RelativeLayout>